# PomoDeck

./: .gitignore  README.md
DevStudio 2026 Submission/: DEVPOST.md  README.md
PomodoroPlugin/: PomodoroPlugin.sln
PomodoroPlugin/src/: AmbientSoundCommand.cs  BitmapPool.cs  CompleteTaskCommand.cs  DialRenderer.cs  HapticAlarm.cs  LaunchAppCommand.cs  LiquidRenderer.cs  PluginLog.cs  PluginResources.cs  PomoDeckBridge.cs  PomoDeckDial.cs  PomoDeckWidget.cs  PomoJarWidget.cs  PomodoroApplication.cs  PomodoroPlugin.cs  PomodoroPlugin.csproj  PomodoroSettings.cs  PomodoroTimer.cs  PressAnimation.cs  RenderGate.cs  SkinEngine.cs  SkipPhaseCommand.cs  SoundAlert.cs  TaskWidget.cs  ThemeHelper.cs  ThemeSwitchCommand.cs
PomodoroPlugin/src/audio/: phase_complete.m4a  winding.m4a
pomotroid/: LICENSE  package-lock.json  package.json
pomotroid/src/: app.css  app.html
pomotroid/src-tauri/: Cargo.toml  tauri.conf.json
pomotroid/src-tauri/icons/: icon.icns
pomotroid/src-tauri/src/: commands.rs  lib.rs  main.rs
pomotroid/src-tauri/src/audio/: mod.rs
pomotroid/src-tauri/src/blocker/: mod.rs  web.rs
pomotroid/src-tauri/src/db/: migrations.rs  mod.rs  queries.rs
pomotroid/src-tauri/src/flow/: mod.rs
pomotroid/src-tauri/src/notifications/: mod.rs
pomotroid/src-tauri/src/settings/: defaults.rs  mod.rs
pomotroid/src-tauri/src/themes/: mod.rs
pomotroid/src-tauri/src/timer/: engine.rs  mod.rs
pomotroid/src-tauri/src/tray/: mod.rs
pomotroid/src-tauri/src/websocket/: mod.rs
pomotroid/src/lib/: types.ts
pomotroid/src/messages/: de.json  en.json  es.json  (+5 more)
(+28 files in other folders)
